--- a/resources/tools/testbed-setup/ansible/roles/dpdk/defaults/main.yaml
+++ b/resources/tools/testbed-setup/ansible/roles/dpdk/defaults/main.yaml
@@ -18,8 +18,14 @@ packages_by_arch:
     - []
 
 dpdk_target_dir: "/opt"
-dpdk_version: "19.08.2"
+dpdk_version:
+  - "19.02"
+  - "20.02"
 dpdk_url: "https://fast.dpdk.org/rel"
 dpdk_build_targets:
-  aarch64: "arm64-armv8a"
-  x86_64: "x86_64-native"
+  "19.02":
+    aarch64: "arm64-armv8a-linuxapp-gcc"
+    x86_64: "x86_64-native-linuxapp-gcc"
+  "20.02":
+    aarch64: "arm64-armv8a-linux-gcc"
+    x86_64: "x86_64-native-linux-gcc"
