--- a/resources/tools/testbed-setup/ansible/roles/dpdk/tasks/main.yaml
+++ b/resources/tools/testbed-setup/ansible/roles/dpdk/tasks/main.yaml
@@ -11,35 +11,41 @@
 
 - name: DPDK - Download Release Archive
   get_url:
-    url: "{{ dpdk_url }}/dpdk-{{ dpdk_version }}.tar.xz"
-    dest: "{{ dpdk_target_dir }}/dpdk-{{ dpdk_version }}.tar.xz"
+    url: "{{ dpdk_url }}/dpdk-{{ item }}.tar.xz"
+    dest: "{{ dpdk_target_dir }}/dpdk-{{ item }}.tar.xz"
     mode: 0644
-  register: "linux__dpdk_downloaded"
+  loop: "{{ dpdk_version }}"
+  register: "dpdk_downloaded"
   tags:
     - install-dpdk
 
-- name: Extract DPDK release archive
+- name: DPDK - Extract Release Archive
   unarchive:
     remote_src: true
-    src: "{{ dpdk_target_dir }}/dpdk-{{ dpdk_version }}.tar.xz"
+    src: "{{ dpdk_target_dir }}/dpdk-{{ item }}.tar.xz"
     dest: "{{ dpdk_target_dir }}/"
-    creates: "{{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }}"
-  when: "linux__dpdk_downloaded"
-  register: "linux__dpdk_extracted"
+    creates: "{{ dpdk_target_dir }}/dpdk-{{ item }}"
+  loop: "{{ dpdk_version }}"
+  when: "dpdk_downloaded"
+  register: "dpdk_extracted"
   tags:
     - install-dpdk
 
-- name: Compile DPDK release
+- name: DPDK - Compile Release I
   become: yes
-  command: "make install T={{ dpdk_build_targets[ansible_machine] }}-linux-gcc DESTDIR={{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }} chdir={{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }}"
-  when: "linux__dpdk_extracted"
-  register: "linux__dpdk_compiled"
+  command: "make install T={{ dpdk_build_targets[item][ansible_machine] }} DESTDIR={{ dpdk_target_dir }}/dpdk-{{ item }} chdir={{ dpdk_target_dir }}/dpdk-{{ item }}"
+  async: 1800
+  poll: 15
+  loop: "{{ dpdk_version }}"
+  when: "dpdk_extracted"
+  register: "dpdk_compiled"
   tags:
     - install-dpdk
 
-- name: Link igb_uio module
-  shell: "ln -fs {{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }}/{{ dpdk_build_targets[ansible_machine] }}-linux-gcc/kmod/igb_uio.ko /lib/modules/`uname -r`/igb_uio.ko && depmod -a"
+- name: DPDK - Link igb_uio Module
+  shell: "ln -fs {{ dpdk_target_dir }}/dpdk-{{ item }}/{{ dpdk_build_targets[item][ansible_machine] }}/kmod/igb_uio.ko /lib/modules/`uname -r`/igb_uio.ko && depmod -a"
   ignore_errors: "yes"
-  when: "linux__dpdk_compiled"
+  loop: "{{ dpdk_version }}"
+  when: "dpdk_compiled"
   tags:
-    - link-igb_uio-module
+    - install-dpdk
