Ansible: LTS support
Signed-off-by: Peter Mikus <pmikus@cisco.com>
Change-Id: I2ade4a57d726b793e422996e83bf767ac4315488

--- a/resources/tools/testbed-setup/ansible/roles/trex/defaults/main.yaml
+++ b/resources/tools/testbed-setup/ansible/roles/trex/defaults/main.yaml
@@ -25,4 +25,7 @@ packages_by_arch:
     - []
 
 trex_target_dir: "/opt"
-trex_version: "2.73"
+trex_versions:
+  - "2.54" # CSIT rls1908
+  - "2.73" # CSIT rls2001
+  - "2.73" # CSIT master
