--- a/resources/tools/testbed-setup/ansible/roles/dpdk/defaults/main_rls1908.yaml
+++ b/resources/tools/testbed-setup/ansible/roles/dpdk/defaults/main_rls1908.yaml
@@ -18,8 +18,8 @@ packages_by_arch:
     - []
 
 dpdk_target_dir: "/opt"
-dpdk_version: "20.02"
+dpdk_version: "19.02"
 dpdk_url: "https://fast.dpdk.org/rel"
 dpdk_build_targets:
-  aarch64: "arm64-armv8a-linux-gcc"
-  x86_64: "x86_64-native-linux-gcc"
+  aarch64: "arm64-armv8a-linuxapp-gcc"
+  x86_64: "x86_64-native-linuxapp-gcc"
