--- a/resources/tools/testbed-setup/ansible/roles/dpdk/tasks/main.yaml
+++ b/resources/tools/testbed-setup/ansible/roles/dpdk/tasks/main.yaml
@@ -14,7 +14,7 @@
     url: "{{ dpdk_url }}/dpdk-{{ dpdk_version }}.tar.xz"
     dest: "{{ dpdk_target_dir }}/dpdk-{{ dpdk_version }}.tar.xz"
     mode: 0644
-  register: "linux__dpdk_downloaded"
+  register: "dpdk_downloaded"
   tags:
     - install-dpdk
 
@@ -24,22 +24,22 @@
     src: "{{ dpdk_target_dir }}/dpdk-{{ dpdk_version }}.tar.xz"
     dest: "{{ dpdk_target_dir }}/"
     creates: "{{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }}"
-  when: "linux__dpdk_downloaded"
-  register: "linux__dpdk_extracted"
+  when: "dpdk_downloaded"
+  register: "dpdk_extracted"
   tags:
     - install-dpdk
 
 - name: Compile DPDK release
   become: yes
-  command: "make install T={{ dpdk_build_targets[ansible_machine] }}-linux-gcc DESTDIR={{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }} chdir={{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }}"
-  when: "linux__dpdk_extracted"
-  register: "linux__dpdk_compiled"
+  command: "make install T={{ dpdk_build_targets[ansible_machine] }} DESTDIR={{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }} chdir={{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }}"
+  when: "dpdk_extracted"
+  register: "dpdk_compiled"
   tags:
     - install-dpdk
 
 - name: Link igb_uio module
-  shell: "ln -fs {{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }}/{{ dpdk_build_targets[ansible_machine] }}-linux-gcc/kmod/igb_uio.ko /lib/modules/`uname -r`/igb_uio.ko && depmod -a"
+  shell: "ln -fs {{ dpdk_target_dir }}/dpdk-stable-{{ dpdk_version }}/{{ dpdk_build_targets[ansible_machine] }}/kmod/igb_uio.ko /lib/modules/`uname -r`/igb_uio.ko && depmod -a"
   ignore_errors: "yes"
-  when: "linux__dpdk_compiled"
+  when: "dpdk_compiled"
   tags:
     - link-igb_uio-module
