Cherry-pick tox checkers from master
Change-Id: Ide532cd216b6b8026f9a803b1801b77c471f17b0
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# Copyright (c) 2019 Cisco and/or its affiliates.
+# Copyright (c) 2020 Cisco and/or its affiliates.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at:
@@ -25,7 +25,10 @@
 # will execute only checks defined in "pylint" tox environment.
 
 [tox]
-envlist = new_line_length, line_length, autogen, pylint, tc_naming, tc_coverage
+# Fast and brief checkers to front, slow or verbose checkers to back.
+envlist = tc_naming, tc_coverage, copyright_year, new_line_length, line_length,
+    autogen, pylint, doc_verify
+
 # The following is needed as tox requires setup.py by default.
 skipsdist = true
 # Just a shorthand to avoid long lines.
@@ -33,16 +36,22 @@ checker_dir = ./resources/libraries/bash/entry/check
 
 # TODO: Tox prints various warnings. Figure them out and fix them.
 
-[testenv:pylint]
-deps =
-    pylint==1.5.4
-    -r ./requirements.txt
+# Keep testenvs sorted alphabetically, please.
+
+[testenv:autogen]
 whitelist_externals = /bin/bash
 setenv = PYTHONPATH = {toxinidir}
-# Run pylint, but hide its return value until python warnings are cleared.
-commands = bash -c "bash {[tox]checker_dir}/pylint.sh || true"
+commands = bash {[tox]checker_dir}/autogen.sh
 
-# TODO: See FIXME in https://gerrit.fd.io/r/16423
+[testenv:copyright_year]
+whitelist_externals = /bin/bash
+setenv = PYTHONPATH = {toxinidir}
+commands = bash {[tox]checker_dir}/copyright_year.sh
+
+[testenv:doc_verify]
+# Fix all documentaion error before enabling voting.
+whitelist_externals = /bin/bash
+commands = bash -c "bash {[tox]checker_dir}/doc_verify.sh || true"
 
 [testenv:line_length]
 whitelist_externals = /bin/bash
@@ -56,20 +65,28 @@ whitelist_externals = /bin/bash
 # the checker has to remain non-voting.
 commands = bash -c "bash {[tox]checker_dir}/new_line.sh || true"
 
-[testenv:autogen]
+[testenv:pylint]
+basepython = python2
+deps =
+    pylint==1.5.4
+    -r ./requirements.txt
 whitelist_externals = /bin/bash
 setenv = PYTHONPATH = {toxinidir}
-commands = bash {[tox]checker_dir}/autogen.sh
+# Run pylint, but hide its return value until python warnings are cleared.
+commands = bash -c "bash {[tox]checker_dir}/pylint.sh || true"
 
-[testenv:tc_naming]
-whitelist_externals = /bin/bash
-# Fix all TC namings and remove the " || true" workaround.
-commands = bash -c "bash {[tox]checker_dir}/tc_naming.sh || true"
+# TODO: See FIXME in https://gerrit.fd.io/r/16423
 
 [testenv:tc_coverage]
 whitelist_externals = /bin/bash
 # Coverage is not needed to be voting.
 commands = bash -c "bash {[tox]checker_dir}/tc_coverage.sh || true"
+
+[testenv:tc_naming]
+whitelist_externals = /bin/bash
+commands = bash {[tox]checker_dir}/tc_naming.sh
+
+# Keep testenvs sorted alphabetically, please.
 
 # TODO: Migrate current docs check here.
 # TODO: Create voting "pylint violations should not increase" checker.
