Add pciutils to trex role, to solve lspci not found.
Signed-off-by: Maros Mullner <maros.mullner@pantheon.tech>
Change-Id: I3b1d5e61fe85b1112d4032f6e2b17b61a812e749

--- a/resources/tools/testbed-setup/ansible/roles/trex/defaults/main.yaml
+++ b/resources/tools/testbed-setup/ansible/roles/trex/defaults/main.yaml
@@ -17,6 +17,7 @@ packages_by_distro:
     - "libssl-dev"
     - "python3-pip"
     - "zlib1g-dev"
+    - "pciutils"  
 
 packages_by_arch:
   aarch64:
